# BlackJackPython

./: pyproject.toml  setup_old.py
DevelopDocs/: Блок_схема.md  Как_быстро_создать_файл_управления_пакетом_в_JetBrains.md  Как_установить_проект_с_помощью_setup_py.md  Пример_setup_для_этого_проекта.md  как_запустить_проект_в_терминале.md
Game21/: Card.py  Deck.py  main.py
